<resources>
    <string name="app_name">아빠농장</string>
    <string name="action_settings">Settings</string>


    <string name="kakao_app_key">91d177809c86d33a3de38b54ab1cab4b</string>
    <string name="kakao_scheme">kakao91d177809c86d33a3de38b54ab1cab4b</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="facebook_app_id">200585803697788</string>

    <string name="regist_cert_title">휴대폰 번호가 몇 번이세요?</string>
    <string name="insert_cert_title">6자리 코드를 보내드렸습니다.</string>
    <string name="alert_check_phone_number">휴대폰 번호를 확인한 후 다시 시도하세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_button">핸드폰 번호로 로그인하기</string>
    <string name="find_friends_title">친구찾기</string>
    <string name="close">닫기</string>
    <string name="find_friends_message">내 친구, 가족, 직장동료가 소개하는 아빠농장을 확인하기 위해서는 주소록 동기화가 필요합니다.\n\n팝업창이 나타나면 "승인"버튼을 눌러주세요.</string>
    <string name="find_friends_button">주소록으로 친구찾기</string>
    <string name="insert_name_title">이름이 어떻게 되세요?</string>
    <string name="last_name">성</string>
    <string name="first_name">이름</string>
    <string name="edit_last_name_hint">성을 입력해주세요.</string>
    <string name="edit_first_name_hint">이름을 입력해주세요.</string>
    <string name="save_btn">저장하기</string>
    <string name="find_friends_count">%1$d개의 연락처에서 %2$d명의 아빠농장 친구를 찾았습니다.</string>
    <string name="home_menu">홈</string>
    <string name="order_list_menu">주문목록</string>
    <string name="regist_product_menu">상품등록</string>
    <string name="notification_menu">알림</string>
    <string name="settings">설정</string>
    <string name="order_count">주문수</string>
    <string name="update">업데이트</string>
    <string name="detail_product_info">상세정보</string>
    <string name="back">뒤로</string>
    <string name="review">구매후기 (%1$d)</string>
    <string name="order">주문하기</string>
    <string name="seller">판매자</string>
    <string name="product_name">상품명</string>
    <string name="order_amount">주문금액</string>
    <string name="quantity">수량</string>
    <string name="find_friends_btn">주소록으로 친구찾기</string>
    <string name="address">주소</string>
    <string name="recipient">수령인</string>
    <string name="contact">연락처</string>
    <string name="account_info">입금정보</string>
    <string name="order_complete">주문완료</string>
    <string name="orderer">주문인</string>
    <string name="name">이름</string>
    <string name="shipping_info">배송정보</string>
    <string name="order_number">주문번호</string>
    <string name="order_date">주문일</string>
    <string name="billing_amount">결제금액</string>
    <string name="deposit_account">입금계좌</string>
    <string name="contact_us">문의하기</string>
    <string name="write_reviews">구매후기 작성하기</string>
    <string name="order_list_title">총 %1$d건의 주문내역이 있습니다</string>
    <string name="empty_regist_product_message">등록된 상품이 없습니다.\n\n아빠, 고모, 삼촌 등 가족들이 정성껏 농사지은 상품을 등록해보세요.</string>
    <string name="add_product_btn">판매상품 등록하기</string>
    <string name="empty_notify_list_message">도착한 알림이 없습니다.</string>
    <string name="manage_friends">친구관리</string>
    <string name="sync_complete_message">%1$s 동기화 됨</string>
    <string name="terms_of_service_btn">이용약관</string>
    <string name="privacy_policy_btn">개인정보 보호정책</string>
    <string name="opensource_license_btn">오픈소스 라이선스</string>
    <string name="delete_account_btn">계정삭제</string>
    <string name="logout_btn">로그아웃</string>
    <string name="enter_the_order_quantity">주문 수량을 입력해주세요.</string>
    <string name="enter_the_shipping_address">배송받을 주소를 입력해주세요.</string>
    <string name="enter_the_recipients_name">수령인 이름을 입력해주세요.</string>
    <string name="enter_the_recipients_phone_number">수령인 전화번호를 입력해주세요.</string>
    <string name="empty_order_list_message">주문한 상품이 없습니다.\n\n내 친구, 직장동료, 학교 선후배의 가족이 정성껏 재배한 상품을 구매해보세요.</string>
    <string name="payment_info">결제정보</string>

    <string name="cancel_edit_product_title">상품수정 취소</string>
    <string name="cancel_edit_product_message">"취소"를 누르시면 작성중이던 내용이 사라집니다. 취소하시겠습니까?</string>
    <string name="no_btn">아니요</string>

    <string name="logout_title">로그아웃</string>
    <string name="logout_message">로그아웃 하시겠습니까?</string>

    <string name="delete_account_title">계정삭제</string>
    <string name="delete_account_message">"계정삭제"를 누르시면 이름, 전화번호, 친구 리스트 등의 정보가 모두 삭제되며 복원이 불가능합니다. 진행하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="regist_photo_message">멋있게 촬영된 상품 사진을 등록하세요.\n첫번째 사진이 메인 이미지로 노출됩니다.</string>
    <string name="enter_title_hint">제목을 입력하세요. 예)강원도 토종 노란감자</string>

    <string name="complete_order_message">상품을 잘 받으셨나요?\n후기를 작성하고 지인의 상품을 널리 알려보세요!</string>
    <string name="regist_product_message">주문 내역 관리 및 판매자 프로필 이미지 변경은\n아빠농장 판매자 전용 웹사이트에서 가능합니다.\n\nhttps://pafarm.kr/seller</string>
    <string name="alert_delete_product_title">중계상품 삭제</string>
    <string name="alert_delete_product_message">중계중인 상품을 삭제하시겠습니까? 삭제한 상품은 복원이 불가능하니 신중히 진행해주세요.</string>
    <string name="alert_delete_product_complete_title">중계상품 삭제</string>
    <string name="alert_delete_product_complete_message">요청하신 상품이 삭제되었습니다. "확인"을 누르시면 상품목록으로 이동합니다.</string>

    <string name="alert_order_my_product_title">주문하기</string>
    <string name="alert_order_my_product_message">자신이 중계하는 상품은 주문이 불가능합니다.</string>

    <string name="back_pressed_message">뒤로 버튼 한번 더 누르시면 종료됩니다.</string>
</resources>
