<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert_name"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rnd.plani.co.kr.dadfarm.Certification.InsertNameActivity">
    <rnd.plani.co.kr.dadfarm.CustomToolbar.IntroToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp">

        <TextView
            android:text="@string/last_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView27" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_last_name"
            android:layout_weight="1"
            android:background="@drawable/bg_white_background_gray_stroke"
            android:padding="8dp"
            android:hint="@string/edit_last_name_hint"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp">

        <TextView
            android:text="@string/first_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView28" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_first_name"
            android:layout_weight="1"
            android:background="@drawable/bg_white_background_gray_stroke"
            android:padding="8dp"
            android:hint="@string/edit_first_name_hint"
            android:textSize="14sp" />


    </LinearLayout>
    <Button
        android:text="@string/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:textColor="@color/selector_black_gray"
        android:background="@drawable/empty_round_rectangle_black_stroke" />
</LinearLayout>

</LinearLayout>
