<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rnd.plani.co.kr.dadfarm.Setting.SettingFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">

            <FrameLayout
                android:id="@+id/frame_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="13dp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/image_profile"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/avatar"
                    app:civ_border_width="0dp" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    app:srcCompat="@drawable/ic_camera_circle" />
            </FrameLayout>

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:text="TextView"
                android:textColor="@color/light_black"
                android:layout_marginBottom="13dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/light_black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_white_background_gray_stroke"
                    android:ems="10"
                    android:layout_marginLeft="84dp"
                    android:inputType="textPersonName"
                    android:textSize="14sp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="12dp"
                    android:paddingTop="11dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/light_black" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/light_black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_white_background_gray_stroke"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:layout_marginLeft="84dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="11dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:textColor="@color/light_black" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/manage_friends"
                        android:textColor="@color/light_black" />

                    <TextView
                        android:id="@+id/text_sync_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/image_sync"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/ic_sync" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_terms"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/empty_round_rectangle_black_stroke"
                    android:text="@string/terms_of_service_btn"
                    android:textColor="@color/selector_black_gray" />

                <Button
                    android:id="@+id/btn_policy"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/empty_round_rectangle_black_stroke"
                    android:text="@string/privacy_policy_btn"
                    android:textColor="@color/selector_black_gray" />

                <Button
                    android:id="@+id/btn_opensource"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/empty_round_rectangle_black_stroke"
                    android:text="@string/opensource_license_btn"
                    android:textColor="@color/selector_black_gray" />

                <Button
                    android:id="@+id/btn_delete_account"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/empty_round_rectangle_black_stroke"
                    android:text="@string/delete_account_btn"
                    android:textColor="@color/selector_black_gray" />

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@drawable/empty_round_rectangle_black_stroke"
                    android:text="@string/logout_btn"
                    android:textColor="@color/selector_black_gray" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
