<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_order_complete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rnd.plani.co.kr.dadfarm.DetailProductInfo.Order.OrderCompleteActivity">

    <rnd.plani.co.kr.dadfarm.CustomToolbar.BlackThemeShareToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="TextView"
                android:textColor="#67625e" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_white_background_gray_stroke"
                android:orientation="horizontal"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textColor="@color/text_light_gray" />

                <TextView
                    android:id="@+id/text_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/orderer"
                android:textColor="#67625e"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_white_background_gray_stroke"
                android:orientation="vertical"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="11dp">

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/text_light_gray"/>

                    <TextView
                        android:id="@+id/text_shopper_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:textColor="@color/text_light_gray"/>

                    <TextView
                        android:id="@+id/text_shopper_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/shipping_info"
                android:textColor="#67625e"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_white_background_gray_stroke"
                android:orientation="vertical"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="11dp">

                    <TextView
                        android:id="@+id/textView37"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="@color/text_light_gray"/>

                    <TextView
                        android:id="@+id/text_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="11dp">

                    <TextView
                        android:id="@+id/textView39"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/recipient"
                        android:textColor="@color/text_light_gray"/>

                    <TextView
                        android:id="@+id/text_shipping_reciever"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView41"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:textColor="@color/text_light_gray"/>

                    <TextView
                        android:id="@+id/text_shipping_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/account_info"
                android:textColor="@color/text_light_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_white_background_gray_stroke"
                android:orientation="vertical"
                android:paddingBottom="14dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="14dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="11dp">

                    <TextView
                        android:id="@+id/textView44"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/order_number"
                        android:textColor="@color/text_light_gray"/>

                    <TextView
                        android:id="@+id/text_order_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="11dp">

                    <TextView
                        android:id="@+id/textView46"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/order_date"
                        android:textColor="@color/text_light_gray"/>

                    <TextView
                        android:id="@+id/text_order_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="11dp">

                    <TextView
                        android:id="@+id/textView48"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="@color/text_light_gray"/>

                    <TextView
                        android:id="@+id/text_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="11dp">

                    <TextView
                        android:id="@+id/textView50"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/billing_amount"
                        android:textColor="@color/text_light_gray"/>

                    <TextView
                        android:id="@+id/text_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView52"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/account_info"
                        android:textColor="@color/text_light_gray"/>

                    <TextView
                        android:id="@+id/text_account_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/contact_us"
                android:textColor="#67625e"/>

            <LinearLayout
                android:id="@+id/linear_relation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_white_background_gray_stroke"
                android:orientation="vertical"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp">

                <ListView
                    android:id="@+id/listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:focusable="false"
                    android:listSelector="@android:color/transparent" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complete_order_message"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                android:textColor="#67625e" />
            <ViewSwitcher
                android:id="@+id/switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/btn_write_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_active_btn"
                    android:text="구매후기 작성하기"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_complete_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_inactive_btn"
                    android:text="구매후기 작성완료"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </ViewSwitcher>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
